--- a/k8s/deployment-aws.yaml
+++ b/k8s/deployment-aws.yaml
@@ -30,10 +30,10 @@ spec:
         resources:
           requests:
             memory: "512Mi"
-            cpu: "0.1"
+            cpu: "100m"
           limits:
             memory: "1024Mi"
-            cpu: "0.6"
+            cpu: "600m"
         livenessProbe:
           httpGet:
             port: http
